namespaces/auth/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: auth
spec:
  clusterIP: 10.102.44.119
  clusterIPs:
  - 10.102.44.119
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
  sessionAffinity: None
  type: ClusterIP
